# irmos-technical-task

./: .dockerignore  .gitignore  Dockerfile  README.md  db_accs.py  docker-compose.yml  irmos_local.db  main.py  pyproject.toml  pytest.ini  requirements.txt  test_script.py
api/: Dockerfile  app.py  settings.py
data/: load_csv_to_db.py
tests/: test-app.py
