[project]
name = "irmos-technical-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "sqlalchemy>=2.0.44",
]
