[project]
name = "irmos-technical-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.12.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "ruff>=0.14.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
